Refactoring. Updated run scripts.